--- a/happytail-front/src/components/PetSearch/PetSearch.scss
+++ b/happytail-front/src/components/PetSearch/PetSearch.scss
@@ -4,7 +4,7 @@
     background-color: #c1c1c1;
     padding: 32px 64px;
 
-    margin-top: 120px;
+    margin-top: 3rem;
 
     display: flex;
     flex-direction: row;
@@ -14,7 +14,12 @@
 
 button {
     background-color: #44B9FF;
-    padding: 10px 32px;
+    padding: 16px 32px;
     color: #fff;
     font-weight: 700;
+    transition: .3s;
+
+    &:hover {
+        opacity: .8;
+    }
 }
