--- a/happytail-front/src/components/Login/Login.scss
+++ b/happytail-front/src/components/Login/Login.scss
@@ -1,11 +1,12 @@
 .app__loginpage {
-    width: 100%;
-    height: 955px;
+    position: fixed;
     display: flex;
-    align-items: center;
+    width: 100%;
+    height: 100%;
     justify-content: center;
-    background-color: #D9D9D9;
-    padding: 16px;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.6);
+    
 
     .app__logincard {
         display: flex;
@@ -87,7 +88,7 @@
         font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
-    .app__createbutton {
+    .app__createAccbutton {
         height: 38px;
         width: 215px;
         display: flex;
