--- a/happytail-front/src/components/ModalPet/ModalPet.scss
+++ b/happytail-front/src/components/ModalPet/ModalPet.scss
@@ -46,5 +46,14 @@
                 }
             }
         }
+
+        .app__modal-image {
+            width: 100%;
+            height: 80%;
+            display: flex;
+            align-items: center;
+            padding: 15;
+            margin-top: 20px;
+        }
     }
 }
