--- a/happytail-front/src/components/Login/Login.scss
+++ b/happytail-front/src/components/Login/Login.scss
@@ -6,15 +6,17 @@
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 4;
     
 
     .app__logincard {
         display: flex;
         flex-direction: column;
-        width: 580px;
-        height: 482px;
+        min-width: 580px;
+        height: 500px;
         background-color: #FFFF;
         padding: 16px;
+        
     }
 
     .app__header {
@@ -23,7 +25,7 @@
         width: 100%;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 80px;
+        margin-bottom: 60px;
         //background-color: #000;
     }
 
@@ -51,10 +53,10 @@
     .app__field {
         width: 400px;
         height: 48px;
-        background-color: #D9D9D9;
-        padding: 10px;
-        margin-bottom: 15px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
+
+
+        margin-bottom: 24px;
+
     }
 
     .app__loginbutton {
@@ -65,7 +67,6 @@
         justify-content: center;
         background-color: #D9D9D9;
         color: #000;
-        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .app__changefield {
@@ -74,7 +75,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 40px;
     }
 
     .app__changebutton {
@@ -85,7 +85,6 @@
         justify-content: center;
         background-color: #D9D9D9;
         color: #000;
-        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .app__createAccbutton {
@@ -96,7 +95,6 @@
         justify-content: center;
         background-color: #D9D9D9;
         color: #000;
-        font-family: Georgia, 'Times New Roman', Times, serif;
         margin-top: 15px;
     }
 
