--- a/happytail-front/src/components/ModalPet/ModalPet.scss
+++ b/happytail-front/src/components/ModalPet/ModalPet.scss
@@ -24,7 +24,7 @@
         max-width: 580px;
 
         height: 100%;
-        max-height: 573px;
+        max-height: 540px;
 
         padding: 16px;
 
@@ -48,12 +48,27 @@
         }
 
         .app__modal-image {
-            width: 100%;
-            height: 80%;
+            width: 50%;
+            // height: 80%;
             display: flex;
             align-items: center;
             padding: 15;
             margin-top: 20px;
+        }
+
+        .pet-modal-dividor {
+            width: 100%;
+            height: 1px;
+            background-color: #000;
+            margin: 20px 0;
+        }
+
+        .modal-infos {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-top: 16px;
         }
     }
 }
