--- a/happytail-front/src/components/Login/Login.scss
+++ b/happytail-front/src/components/Login/Login.scss
@@ -13,7 +13,7 @@
         display: flex;
         flex-direction: column;
         min-width: 580px;
-        height: 500px;
+        // height: 500px;
         background-color: #FFFF;
         padding: 16px;
         
@@ -21,17 +21,15 @@
 
     .app__header {
         display: flex;
-        height: 30px;
         width: 100%;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 60px;
+        margin-bottom: 20px;
         //background-color: #000;
     }
 
     .app__headertitle {
         margin-left: 260px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
     }
 
     .app__cancelbutton {
