--- a/happytail-front/src/components/Navbar/Navbar.scss
+++ b/happytail-front/src/components/Navbar/Navbar.scss
@@ -6,11 +6,11 @@
     align-items: center;
 
     padding: .5rem 2rem;
-    background-color: rgba(28, 28, 28, 0.446);
+    background-color: #FFFFF3;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
 
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border-bottom: 1px solid #454545;
 
     z-index: 1;
 
