--- a/happytail-front/src/components/ModalAppPet/ModalAddPet.scss
+++ b/happytail-front/src/components/ModalAppPet/ModalAddPet.scss
@@ -14,7 +14,7 @@
         display: flex;
         flex-direction: column;
         min-width: 580px;
-        background-color: #FFF;
+        background-color: #FFFFF3;
         padding: 16px;
         border-radius: 8px;
     }
@@ -32,57 +32,33 @@
         font-weight: bold;
     }
 
+    .app__field {
+        margin-top: 8px;
+        width: 100%;
+    }
+
     .modal-close-button {
         height: 24px;
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #FFF;
+        color: #454545;
         cursor: pointer;
     }
 
-    .modal-field {
-        width: 100%;
-        height: 48px;
-        margin-bottom: 24px;
+    .register {
+        background-color: #44B9FF;
+        padding: 16px 32px;
+        color: #fff;
+        font-weight: 700;
+        transition: .3s;
 
-        &.short {
-            width: 50%;
+        border-radius: 4px;
+
+        align-self: center;
+    
+        &:hover {
+            opacity: .8;
         }
-    }
-
-    .modal-button {
-        height: 38px;
-        width: 146px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #D9D9D9;
-        color: #000;
-        cursor: pointer;
-    }
-
-    .modal-change-button {
-        height: 38px;
-        width: 254px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #D9D9D9;
-        color: #000;
-        cursor: pointer;
-        margin-top: 15px;
-    }
-
-    .modal-create-button {
-        height: 38px;
-        width: 215px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #D9D9D9;
-        color: #000;
-        margin-top: 15px;
-        cursor: pointer;
     }
 }
