--- a/happytail-front/src/components/ModalPet/ModalPet.scss
+++ b/happytail-front/src/components/ModalPet/ModalPet.scss
@@ -18,7 +18,9 @@
     .app__modal-content {
         z-index: 3;
         position: absolute;
-        background-color: #c1c1c1;
+        background-color: #FFFFF3;
+
+        border-radius: 8px;
 
         width: 100%;
         max-width: 580px;
@@ -26,7 +28,10 @@
         height: 100%;
         max-height: 540px;
 
-        padding: 16px;
+        padding: 8px 16px;
+
+        display: flex;
+        flex-direction: column;
 
 
         .app__modal-header {
@@ -69,6 +74,22 @@
             align-items: center;
             justify-content: space-between;
             margin-top: 16px;
+        }
+
+        .schedule {
+            background-color: #44B9FF;
+            padding: 16px 32px;
+            color: #fff;
+            font-weight: 700;
+            transition: .3s;
+    
+            border-radius: 4px;
+
+            align-self: center;
+        
+            &:hover {
+                opacity: .8;
+            }
         }
     }
 }
