--- a/happytail-front/src/components/PetSearch/PetSearch.scss
+++ b/happytail-front/src/components/PetSearch/PetSearch.scss
@@ -1,8 +1,9 @@
 .app__petresearch {
     width: 100%;
     max-width: 1000px;
-    background-color: #c1c1c1;
+    background-color: #FFFFF3;
     padding: 32px 64px;
+    border: 1px solid #454545;
 
     margin-top: 3rem;
 
@@ -10,6 +11,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    border-radius: 8px;
     
     button {
         background-color: #44B9FF;
@@ -17,6 +20,8 @@
         color: #fff;
         font-weight: 700;
         transition: .3s;
+
+        border-radius: 4px;
     
         &:hover {
             opacity: .8;
