--- a/happytail-front/src/pages/Dashboard/Dashboard.scss
+++ b/happytail-front/src/pages/Dashboard/Dashboard.scss
@@ -4,11 +4,13 @@
 
     .sidebar {
         width: 200px;
-        background-color: #333;
-        color: #fff;
+        background-color: #FFFFF3;
+        color: #454545;
         padding: 20px;
         display: flex;
         flex-direction: column;
+
+        border-right: 1px solid #454545;
         align-items: center;
 
         .ong-info {
